# whisper-catch

./: CLAUDE.md  Cargo.toml  README.md  SCOPE.md
.github/workflows/: release-macos.yml
apps/cli/: Cargo.toml
apps/cli/src/: autostart.rs  config.rs  main.rs  overlay.rs  settings_app.rs  shot.rs  theme.rs  wizard.rs
crates/core/: Cargo.toml
crates/core/examples/: transcribe_wav.rs
crates/core/src/: audio.rs  engine.rs  history.rs  lib.rs  state.rs
crates/hotkey/: Cargo.toml
crates/hotkey/src/: lib.rs
crates/inject/: Cargo.toml
crates/inject/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs
crates/tray/: Cargo.toml
crates/tray/src/: lib.rs
docs/: DESIGN-handoff.md  DESIGN.md  og-card.html
hero-video/: .gitignore  README.md  index.html  meta.json  package.json
packaging/deb/: 70-whisper-catch.rules  postinst  whisper-catch.desktop
packaging/macos/: README.md  build-dmg.sh  entitlements.plist
site/: index.html  package-lock.json  package.json  robots.txt  sitemap.xml
site/api/: waitlist.js
