[workspace]
resolver = "2"
members = ["crates/core", "crates/hotkey", "crates/inject", "crates/tray", "crates/models", "apps/cli"]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = "thin"
strip = true
