[package]
name = "whisper-catch"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "Local push-to-talk dictation — hold a key, speak, release; text appears at your cursor"

[package.metadata.deb]
name = "whisper-catch"
copyright = "2026, Aviroop Paul"
extended-description = """\
Runs a local speech-to-text model (NVIDIA Parakeet) on-device. \
Hold a configurable hotkey, speak, release — punctuated text is typed \
into the focused application. No audio leaves the machine."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/whisper-catch", "usr/bin/", "755"],
    ["../../packaging/deb/70-whisper-catch.rules", "usr/lib/udev/rules.d/", "644"],
    ["../../packaging/deb/whisper-catch.desktop", "usr/share/applications/", "644"],
]
maintainer-scripts = "../../packaging/deb"

[dependencies]
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
clap = { version = "4", features = ["derive"] }
wc-core = { path = "../../crates/core" }
wc-hotkey = { path = "../../crates/hotkey" }
wc-inject = { path = "../../crates/inject" }
wc-tray = { path = "../../crates/tray" }
wc-models = { path = "../../crates/models" }
transcribe-rs = { version = "0.3", features = ["onnx"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
dirs = "6"
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
chrono = "0.4"
notify-rust = "4"
fs2 = "0.4"
