[package]
name = "whisper-catch"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "Local push-to-talk dictation — hold a key, speak, release; text appears at your cursor"

[package.metadata.deb]
name = "whisper-catch"
copyright = "2026, Aviroop Paul"
extended-description = """\
Runs a local speech-to-text model (NVIDIA Parakeet) on-device. \
Hold a configurable hotkey, speak, release — punctuated text is typed \
into the focused application. No audio leaves the machine."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/whisper-catch", "usr/bin/", "755"],
    ["../../packaging/deb/70-whisper-catch.rules", "usr/lib/udev/rules.d/", "644"],
    ["../../packaging/deb/whisper-catch.desktop", "usr/share/applications/", "644"],
    ["../../assets/icon-16.png", "usr/share/icons/hicolor/16x16/apps/whisper-catch.png", "644"],
    ["../../assets/icon-32.png", "usr/share/icons/hicolor/32x32/apps/whisper-catch.png", "644"],
    ["../../assets/icon-48.png", "usr/share/icons/hicolor/48x48/apps/whisper-catch.png", "644"],
    ["../../assets/icon-64.png", "usr/share/icons/hicolor/64x64/apps/whisper-catch.png", "644"],
    ["../../assets/icon-128.png", "usr/share/icons/hicolor/128x128/apps/whisper-catch.png", "644"],
    ["../../assets/icon-256.png", "usr/share/icons/hicolor/256x256/apps/whisper-catch.png", "644"],
    ["../../assets/icon-512.png", "usr/share/icons/hicolor/512x512/apps/whisper-catch.png", "644"],
]
maintainer-scripts = "../../packaging/deb"

[dependencies]
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
clap = { version = "4", features = ["derive"] }
wc-core = { path = "../../crates/core" }
wc-hotkey = { path = "../../crates/hotkey" }
wc-inject = { path = "../../crates/inject" }
wc-tray = { path = "../../crates/tray" }
wc-models = { path = "../../crates/models" }
transcribe-rs = { version = "0.3", features = ["onnx"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
dirs = "6"
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
egui-phosphor = "0.9"
chrono = "0.4"
notify-rust = "4"
fs2 = "0.4"
signal-hook = "0.3"
