[package]
name = "wc-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["capture"]
capture = ["dep:cpal", "dep:rubato"]

[dependencies]
anyhow.workspace = true
log.workspace = true
transcribe-rs = { version = "0.3", features = ["onnx"] }
cpal = { version = "0.16", optional = true }
rubato = { version = "0.16", optional = true }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
env_logger.workspace = true
