[package]
name = "wc-hotkey"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"
