[package]
name = "wc-tray"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
wc-core = { path = "../core", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.3", default-features = false, features = ["blocking", "async-io"] }

[target.'cfg(target_os = "macos")'.dependencies]
tray-icon = "0.24"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSResponder", "NSRunningApplication"] }
objc2-foundation = "0.3"
